# SIpc

./: README.md  meson.build
examples/: meson.build
examples/src/: example1.cpp  example2.cpp
include/SIpc/: Common.h  Process.h  SIpc.h  SharedMemory.h
src/: Process.cpp  SharedMemory.cpp  meson.build
